After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 754833 - dmabuf & fdmemory: fix allocator_alloc documentation
dmabuf & fdmemory: fix allocator_alloc documentation
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal minor
: 1.6.0
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-09-10 13:18 UTC by Aurélien Zanelli
Modified: 2015-09-23 14:03 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
dmabuf: remove 'allow-none' annotation in gst_dmabuf_allocator_alloc() doc (1013 bytes, patch)
2015-09-10 13:19 UTC, Aurélien Zanelli
committed Details | Review
fdmemory: remove 'allow-none' annotation in gst_fd_allocator_alloc() doc (1.01 KB, patch)
2015-09-10 13:20 UTC, Aurélien Zanelli
committed Details | Review

Description Aurélien Zanelli 2015-09-10 13:18:06 UTC
gst_dmabuf_allocator_alloc() and gst_fd_allocator_alloc() documentation say we can pass a NULL allocator, which is not the case.
Comment 1 Aurélien Zanelli 2015-09-10 13:19:41 UTC
Created attachment 311071 [details] [review]
dmabuf: remove 'allow-none' annotation in gst_dmabuf_allocator_alloc() doc
Comment 2 Aurélien Zanelli 2015-09-10 13:20:10 UTC
Created attachment 311072 [details] [review]
fdmemory: remove 'allow-none' annotation in gst_fd_allocator_alloc() doc
Comment 3 Nicolas Dufresne (ndufresne) 2015-09-10 14:08:33 UTC
Make sense, that's clearly a copy paste from the gst_allocator_alloc().
Comment 4 Aurélien Zanelli 2015-09-23 11:52:11 UTC
As it only changes documentation, we may merge it for 1.6 release if there is no objection.
Comment 5 Nicolas Dufresne (ndufresne) 2015-09-23 14:02:46 UTC
Yes, that change is correct, and will actually prevent a crash from
interpreted language like python and JS.


Attachment 311071 [details] pushed as 4559feb - dmabuf: remove 'allow-none' annotation in gst_dmabuf_allocator_alloc() doc
Attachment 311072 [details] pushed as 94e0279 - fdmemory: remove 'allow-none' annotation in gst_fd_allocator_alloc() doc