dmabuf: remove 'allow-none' annotation in gst_dmabuf_allocator_alloc() doc

gst_dmabuf_allocator_alloc() ensure that passed allocator is a DMABuf
allocator, so that we can't pass NULL allocator.

https://bugzilla.gnome.org/show_bug.cgi?id=754833